# lyrgen

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: demo.py
src/lyrgen/: core.py
tests/: test_core.py
