[tool.poetry]
name        = "lyrgen"
version     = "0.1.0"
description = "Lyric generator based on MIDI and spectral analysis"

[tool.poetry.dependencies]
python      = "^3.10"
numpy       = "^1.25"
librosa     = "^0.10"
pretty_midi = "^0.2"

[tool.poetry.dev-dependencies]
pytest      = "^7.4"
black       = "^24.1"
flake8      = "^7.0"
transformers = "^4.30"
torch        = "^2.0"

